fetch json, selection btns, refactoring

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
    <main>
       <div class="fragments-container">
          <input type="text" name="search-frags"  placeholder="Search fragments" id="search-frags">
+         <div class="selection">
+            <button class="select-all" type="button">select all</button>
+            <button class="unselect-all" type="button">unselect all</button>
+         </div>
       </div>
       <div class="sets-container">
          <input type="text" name="search-sets" placeholder="Search sets"  id="search-sets">
