--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
          <input type="text" name="search-sets" placeholder="Search sets"  id="search-sets">
       </div>
    </main>
+   <footer>Made with ❤ by <a target="blank" href="https://github.com/ThibaudLanglais">Thibaud Langlais</a></footer>
 </body>
 </html>
