--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
       </div>
     </header>
     <main>
-      <div class="set-state"></div>
+      <div class="state-container">
+        <div class="set-state"></div>
+        <button class="unselect-all">
+          <img src="delete.png" alt="Unselect all fragments" />
+        </button>
+      </div>
       <div class="frags-sets">
-        <div class="frags">
+        <div class="frags-container">
           <div class="search-unselect">
             <input
               type="text"
@@ -53,10 +58,8 @@
               name="search-frags"
               id="search-frags"
             />
-            <button title="Unselect all fragments" class="unselect-all">
-              <img src="empty.png" alt="Unselect all fragments" />
-            </button>
           </div>
+          <div class="frags"></div>
         </div>
         <div class="sets">
           <div class="actions-bar">
