added old school and ui changes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <header>
       <div class="inner">
         <img src="new_logo.png" alt="Runesets logo" />
+        <a href="./old-school-runesets">Old-school RuneSets</a>
       </div>
     </header>
     <main>
@@ -58,6 +59,10 @@
               name="search-frags"
               id="search-frags"
             />
+          </div>
+          <div class="toggle-limit">
+            <input checked type="checkbox" id="toggle-limit" />
+            <label for="toggle-limit">Enable limit on activated fragments</label>
           </div>
           <div class="frags"></div>
         </div>
