--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!--<link
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <script defer src="https://unpkg.com/@popperjs/core@2"></script>
     <script defer src="https://unpkg.com/tippy.js@6"></script>
-    <script src="index.js" defer></script>
+    <script src="index.js" defer></script>-->
+    <link href="https://fonts.googleapis.com/css?family=Comic+Neue" rel="stylesheet">
+
   </head>
   <body>
-    <div class="popup-infos">
+    <!--<div class="popup-infos">
       <div class="inner">
         <div class="frag-info"></div>
         <div class="set-info">
@@ -36,7 +38,7 @@
         </div>
         <button class="close">Close</button>
       </div>
-    </div>
+    </div>-->
     <header>
       <div class="inner">
         <img src="new_logo.png" alt="Runesets logo" />
@@ -44,7 +46,7 @@
       </div>
     </header>
     <main>
-      <div class="state-container">
+     <!--<div class="state-container">
         <div class="set-state"></div>
         <button class="unselect-all">
           <img src="delete.png" alt="Unselect all fragments" />
@@ -92,8 +94,25 @@
           </div>
           <div class="sets-list"></div>
         </div>
-      </div>
+      </div>-->
+<div class="rainbow-text" style="text-align: center;">
+	<div class="rainbow-text" style="text-align: center;">
+	<span class="block-line"><span><span style="color:#ff0000;">F</span><span style="color:#ff4000;">u</span><span style="color:#ff8000;">c</span><span style="color:#ffbf00;">k&nbsp;</span></span><span><span style="color:#ffff00;">o</span><span style="color:#bfff00;">f</span><span style="color:#80ff00;">f</span><span style="color:#40ff00;">,&nbsp;</span></span><span><span style="color:#00ff00;">c</span><span style="color:#00ff40;">o</span><span style="color:#00ff80;">m</span><span style="color:#00ffbf;">e&nbsp;</span></span><span><span style="color:#00ffff;">b</span><span style="color:#00bfff;">a</span><span style="color:#007fff;">c</span><span style="color:#0040ff;">k&nbsp;</span></span><span><span style="color:#0000ff;">n</span><span style="color:#4000ff;">e</span><span style="color:#7f00ff;">x</span><span style="color:#bf00ff;">t&nbsp;</span></span><span><span style="color:#ff00ff;">y</span><span style="color:#ff00bf;">e</span><span style="color:#ff0080;">a</span><span style="color:#ff0040;">r</span></span></span>
+</div>
+</div>
     </main>
     <footer></footer>
   </body>
+<style>
+.rainbow-text {
+	font-family: 'Comic Neue', cursive;
+	font-weight: bold;
+	font-size: 44px;
+	text-shadow: #A3A3A3 1px 1px 1px;
+}
+.rainbow-text .block-line > span {
+	display: inline-block;
+}
+
+</style>
 </html>
