--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
       <div class="inner">
         <img src="new_logo.png" alt="Runesets logo" />
-        <a href="./old-school-runesets">Old-school RuneSets</a>
+       <!--<a href="./old-school-runesets">Old-school RuneSets</a>-->
       </div>
     </header>
     <main>
