--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 	<span class="block-line"><span><span style="color:#ff0000;">F</span><span style="color:#ff4000;">u</span><span style="color:#ff8000;">c</span><span style="color:#ffbf00;">k&nbsp;</span></span><span><span style="color:#ffff00;">o</span><span style="color:#bfff00;">f</span><span style="color:#80ff00;">f</span><span style="color:#40ff00;">,&nbsp;</span></span><span><span style="color:#00ff00;">c</span><span style="color:#00ff40;">o</span><span style="color:#00ff80;">m</span><span style="color:#00ffbf;">e&nbsp;</span></span><span><span style="color:#00ffff;">b</span><span style="color:#00bfff;">a</span><span style="color:#007fff;">c</span><span style="color:#0040ff;">k&nbsp;</span></span><span><span style="color:#0000ff;">n</span><span style="color:#4000ff;">e</span><span style="color:#7f00ff;">x</span><span style="color:#bf00ff;">t&nbsp;</span></span><span><span style="color:#ff00ff;">y</span><span style="color:#ff00bf;">e</span><span style="color:#ff0080;">a</span><span style="color:#ff0040;">r</span></span></span>
 </div>
 </div>
+<p style="font-size: 8px;color: white;text-align:center;" >or don't, idc</p>
     </main>
     <footer></footer>
   </body>
